Revert "reverted to non jsx to test my npm init went ok, committing then moving forward with node babel"
This reverts commit 9d9c3dd0bc21184d695eff60dbff0ca6246592f5.

--- a/03-jsx.html
+++ b/03-jsx.html
@@ -5,13 +5,13 @@
 	<script type="text/javascript">
 		const rootElement = document.getElementById('root')
 		// Removal
-		const element = React.createElement('div', 
-			{
-				className: 'container',
-				children: 'Hello World',
-			}
-		)
-		// const element = <div className="container">Hello World</div>
+		// const element = React.createElement('div', 
+		// 	{
+		// 		className: 'container',
+		// 		children: 'Hello World',
+		// 	}
+		// )
+		const element = <div className="container">Hello World</div>
 		ReactDOM.render(element, rootElement)
 	</script>
 </body>
