needed to finish video 11/file 10, did last two minutes without audio. need to rewatch that.

--- a/10-styling.html
+++ b/10-styling.html
@@ -33,7 +33,7 @@
             const sizeClassName = size ? `box--${size}` : ''
             return (
                 <div 
-                    className={`box ${className} ${sizeClassName}`} 
+                    className={`box ${className} ${sizeClassName}`}
                     style={{fontStyle: 'italic', ...style}}
                     {...rest} 
                 />
@@ -52,13 +52,13 @@
                 <Box 
                     size="medium" 
                     style={{backgroundColor: 'pink'}}>
-                    medium light blue box
+                    medium pink box
                 </Box>   
 
                 <Box 
                     size="large" 
                     style={{backgroundColor: 'orange'}}>
-                    large light blue box
+                    large orange box
                 </Box>   
             </div>
         )
